--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -14,6 +14,7 @@ header h1{
     font-family: geoFont, Verdana, Tahoma, sans-serif;
     margin-top: 20px;
     margin-bottom: 20px;
+    width: 100%;
 }
 header h1 a{
     color: inherit;
@@ -104,8 +105,11 @@ li#currentPage a{
 }
 @media screen and (max-width: 480px){
     header nav {
-        margin: 0 0 5px;
+        margin: 0;
+        padding: 0;
         width: 100%;
+        list-style-type: none;
+        display: block;
     }
     header nav li {
         margin: 0;
