--- a/project2/css/styles.css
+++ b/project2/css/styles.css
@@ -38,44 +38,49 @@ header h1{
 }
 
 #banner{
+    box-sizing: border-box;
     width: 100%;
+    max-width: 1280px;
     background-color: rgb(64, 88, 161);
 }
 
 /* Button */
 button{
-    display : inline-block;
-    cursor : pointer;
-  
-    border-style : solid;
-    border-width : 1px;
-    border-radius : 50px;
-    padding : 10px 18px;
-    box-shadow : 0 1px 4px rgba(0,0,0,.6);
-    font-size : 9.5pt;
-    font-weight : bold;
-    color : #fff;
-    text-shadow : 0 1px 3px rgba(0,0,0,.4);
-    font-family : sans-serif;
-    text-decoration : none;
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    border: 1px solid transparent;
+    padding: 0.5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: 0.3rem;
+    transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   }
   
-  button.green{
-      border-color: #8fc800;
-        background: #8fc800;
-        background: linear-gradient(top, #8fc800 0%,#438c00 100%);
+  button.search{
+    color: #fff;
+    background-color: #F13C20;
+    border-color: #F13C20;
   }
   
-  button:hover{
-      background: #8fDD00;
+  button.search:hover{
+    text-decoration: none;
+    color: #fff;
+    background-color: #C73721;
+    border-color: #C73721;
   }
   
-  button:active{
-      background: #8fFF00;
+  button.search:active{
+      background: rgb(255, 76, 49);
       box-shadow : 0 0 6px rgba(0,0,0,.6);
   }
-  
-  button:focus {outline:0;}
+
+  button.search:focus{
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(241, 60, 32, 0.25);
+  }
 
 /* Results */
 .result {
@@ -93,19 +98,26 @@ button{
 }
 
 .result img {
-    position: absolute;
+    position: relative;
     margin-left: 50%;
     transform: translate(-50%, 0);
-    bottom: 5px;
-    display:block;
+    display: inline-block;
 }
 
 .result span{
     font-size:12px;
-    font-weight:bold;
-    display:block;
 }
 
 .result audio{
     width: 130px;
+}
+
+#trackName{
+    display: inline-block;
+    font-weight: bold;
+}
+
+#artistName{
+    display: block;
+    font-style: italic;
 }
