--- a/project2/css/styles.css
+++ b/project2/css/styles.css
@@ -88,7 +88,7 @@ button{
     position: relative;
     width: 20%;
     max-width: 200px;
-    height: 170px;
+    height: 185px;
     display: inline-block;
     border-left: 4px solid rgba(64, 88, 161, 0.2);
     border-bottom: 4px solid rgba(64, 88, 161, 0.2);
@@ -112,12 +112,14 @@ button{
     width: 130px;
 }
 
-#trackName{
+.trackName{
     display: inline-block;
     font-weight: bold;
+    height: 2em;
 }
 
-#artistName{
+.artistName{
     display: block;
     font-style: italic;
+    height: 2em;
 }
